name:                mazeFight
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Xuanzhu Zhou, Manqing Zheng, Xiuqi Chen
maintainer:          xuz004@ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mazeFight
  main-is:             Main.hs
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , mtl
  hs-source-dirs:      src
  other-modules:       Maze,
                       UI
  default-language:    Haskell2010
  ghc-options:       -W -threaded

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -threaded
  main-is:           Test.hs
  build-depends:     base >=4.9
                    , process
                    , QuickCheck
